Test png resize

--- a/App7/App7/App7.csproj
+++ b/App7/App7/App7.csproj
@@ -12,6 +12,7 @@
 
 	<ItemGroup>
 		<SharedImage Include="camera.svg" BaseSize="44" />
+		<SharedImage Include="loginbg.png" BaseSize="123,105" />
 	</ItemGroup>
 
   <ItemGroup>
