--- a/Resizetizer/Resizetizer.csproj
+++ b/Resizetizer/Resizetizer.csproj
@@ -5,14 +5,16 @@
 
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
-		<PackageId>Resizetizer</PackageId>
-		<Title>Resizetizer for Xamarin Image Assets</Title>
+		<PackageId>Resizetizer.NT</PackageId>
+		<Title>Resizetizer NT for Xamarin Image Assets</Title>
 		<Version>2.0-preview1</Version>
 		<Authors>Redth</Authors>
 		<Owners>Redth</Owners>
 		<summary>Easily and automatically resize your source image assets as part of your build process.</summary>
 		<PackageDescription>
 			Easily and automatically resize your source image assets as part of your build process.
+			
+			Add shared images to your shared project: `<ItemGroup><SharedImage Include="blah.svg" BaseSize="40,20" />` 
 		</PackageDescription>
 		<Copyright>Copyright © Redth</Copyright>
 		<projectUrl>https://github.com/redth/Resizetizer/</projectUrl>
