--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,8 @@ jobs:
       - name: Define Version
         run: echo "::set-env name=NUPKG_VER::$NUPKG_MAJOR-pre$GITHUB_RUN_ID"
       - name: Define Release Version
-        env:
-          NUPKG_REL_VER: ${{ github.event.tag_name }}
         if: github.event_name == 'release'
-        run: echo "::set-env name=NUPKG_VER::$NUPKG_REL_VER"
+        run: echo ::set-env name=NUPKG_VER::${GITHUB_REF#refs/tags/}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup .NET Core
