--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
         run: echo "::set-env name=NUPKG_VER::$NUPKG_MAJOR-pre$GITHUB_RUN_ID"
       - name: Define Release Version
         if: github.event_name == 'release'
-        run: echo ::set-env name=NUPKG_VER::${GITHUB_REF#refs/tags/}
+        run: echo ::set-output name=NUPKG_VER::${GITHUB_REF/refs\/tags\//}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup .NET Core
