--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,15 +20,19 @@ jobs:
           dotnet-version: 3.1.100
       - name: Setup Environment
         run: mkdir ./output
-      - name: Define Version
+      - name: Define CI Version
         run: echo "::set-env name=NUPKG_VER::$NUPKG_MAJOR-pre$GITHUB_RUN_ID"
       - name: Define Release Version
         if: github.event_name == 'release'
-        run: echo ::set-output name=NUPKG_VER::${GITHUB_REF/refs\/tags\//}
+        run: echo ::set-output name=NUPKG_VER_REL::${GITHUB_REF/refs\/tags\//}
       - name: Build Project
         run: dotnet build --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
-      - name: NuGet Pack
+      - name: NuGet Pack (CI)
+        if: github.event_name != 'release'
         run: dotnet pack --output ./artifacts -p:PackageVersion=$NUPKG_VER --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
+      - name: NuGet Pack (Release)
+        if: github.event_name == 'release'
+        run: dotnet pack --output ./artifacts -p:PackageVersion=$NUPKG_VER_REL --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
       - name: Upload Artifacts
         uses: actions/upload-artifact@v1
         with:
@@ -49,5 +53,11 @@ jobs:
           uses: actions/setup-dotnet@v1
           with:
             dotnet-version: 3.1.100
+        - name: Setup NuGet
+          uses: warrenbuckley/Setup-Nuget@v1
+        - name: Setup NuGet Source
+          run: nuget sources add -Name "GPR" -Source "https://nuget.pkg.github.com/redth/index.json" -UserName "redth" -Password "${{ secrets.GITHUB_TOKEN }}"
+          shell: cmd
         - name: Publish NuGet
-          run: dotnet nuget push NuGet\*.nupkg --source "github"
+          run: nuget push NuGet/*.nupkg -Source "GPR"
+          shell: cmd
