--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,18 +21,14 @@ jobs:
       - name: Setup Environment
         run: mkdir ./output
       - name: Define CI Version
-        run: echo "::set-env name=NUPKG_VER::$NUPKG_MAJOR-pre$GITHUB_RUN_ID"
+        run: echo ::set-env name=NUPKG_VER::$NUPKG_MAJOR-pre$GITHUB_RUN_ID
       - name: Define Release Version
         if: github.event_name == 'release'
-        run: echo ::set-output name=NUPKG_VER_REL::${GITHUB_REF/refs\/tags\//}
+        run: echo ::set-env name=NUPKG_VER::${GITHUB_REF/refs\/tags\//}
       - name: Build Project
         run: dotnet build --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
-      - name: NuGet Pack (CI)
-        if: github.event_name != 'release'
+      - name: NuGet Pack
         run: dotnet pack --output ./artifacts -p:PackageVersion=$NUPKG_VER --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
-      - name: NuGet Pack (Release)
-        if: github.event_name == 'release'
-        run: dotnet pack --output ./artifacts -p:PackageVersion=$NUPKG_VER_REL --configuration Release ./Resizetizer.NT/Resizetizer.NT.csproj
       - name: Upload Artifacts
         uses: actions/upload-artifact@v1
         with:
