--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,3 +59,4 @@ jobs:
             nuget sources add -Name "GPR" -Source "https://nuget.pkg.github.com/Redth/index.json" -UserName Redth -Password ${{ secrets.GITHUB_TOKEN }}
             nuget setApiKey ${{ secrets.NUGET_API_KEY }} -Source "GPR"
             nuget push NuGet\*.nupkg -Source "GPR"
+            nuget push NuGet\*.nupkg -Source https://api.nuget.org/v3/index.json -ApiKey ${{ secrets.NUGET_ORG_API_KEY }}
